# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.567 2008-02-12 18:42:45 ub Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

CVS HEAD (????/??/??)
 - (2008/02/12) Fixed bug# 1996 - Replaced 'U' & 'D' with respective arrow
    icons.
 - (2008/02/12) Improved Fix for bug# 1608 - Badly formatted calendar popup.
    Now the table width is explicity passed into DTL from the perl module
    and the customer calendar view has been fixed, too.
 - (2008/02/11) Added queue preferences - module support like for agents and
    customer to create easier extentions/addons for queues.
    See Developer-Manual for more information.
    NOTE: table sla need to be modified - use scripts/DBUpdate-to-2.3.*.sql
 - (2008/02/11) Added escalation warning feature. So agents will be notified
    before a ticket will escalate. This time point can be configured in the
    admin interface for queue and sla settings.
    NOTE: table queue need to be modified - use scripts/DBUpdate-to-2.3.*.sql
 - (2008/02/04) Fixed bug# 1608 - Badly formatted calendar popup.
-  (2008/02/04) Fixed bug# 2657 - Improved regexp in RPM spec files to detect
    already existing "otrs" user (it was also matching on xxxotrsxxx names).
 - (2008/01/28) Added note permission "note" to default ticket permissions to
    manage list of inform involved agents out of the box.
 - (2008/01/24) Fixed bug# 2611 - PGP module not working on Windows platform.
 - (2008/01/15) Fixed bug# 2227 - XMLHashSearch returns no values on MS SQL in
    certain cases.
 - (2008/01/08) Added expand/collapse option to ticket zoom.
 - (2008/01/08) Added multi attachment support to ticket move screen.
 - (2008/01/08) Added AJAX support in email ticket.